# Fund-My-Cause

./: .gitignore  .gitleaks.toml  APM_MONITORING_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_BROWSER_TESTING.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  FINAL_CHECKLIST.md  GAMIFICATION_IMPLEMENTATION.md  GRAPHQL_API_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MANUAL_PR_CREATION.md  PR_DESCRIPTION.md  README.md  START_HERE.md  TASK_2_COMPLETION_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  release-please-config.json
.github/: PULL_REQUEST.md
.github/ISSUE_TEMPLATE/: browser_compatibility.md
.github/workflows/: blue-green-deploy.yml  cost-monitoring.yml  dependency-update.yml  deploy-testnet.yml  frontend-canary.yml  frontend_ci.yml  monitoring-setup.yml  playwright.yml  (+5 more)
.husky/: pre-commit
contracts/achievements/: Cargo.toml
contracts/achievements/src/: achievements.rs  errors.rs  events.rs  leaderboard.rs  lib.rs  points.rs  storage.rs  types.rs  validation.rs
docs/: LOCAL_DEVELOPMENT_QUICKSTART.md  architecture-detailed.md  blue-green-deployment.md  bundle-optimization.md  canary-deployment.md  contract-verification.md  docker-deployment.md  git-hooks.md  security-model.md  troubleshooting.md  typescript-guide.md
e2e/: README.md  a11y-baseline.md  accessibility.spec.ts
fixtures/: README.md
scripts/: canary-frontend.sh  deploy.sh  generate-fixtures.ts  monitor-costs.sh  monitoring-setup.sh  seed-testnet.ps1  seed-testnet.sh  test-browsers.ps1  test-browsers.sh  verify-contract.sh  verify-deployment.sh
(+115 files in other folders)
